libcsp 2.0, xx-yy-zzzz
----------------------
- new: CSP Header 2.0. Support for 14-bit network addresses.
- new: CFP (Can fragmentation protocol) 2.0
- new: Layer-3 broadcast (last address of each subnet)
- new: One CSP address per interface
- new: Meson build system
- new: CMake build system
- new: Went back to use more compile time configuration for less runtime checks and simpler memory allocation
- new: Connection less callbacks. The router now supports executing small services directly using a callback saving memory
- new: csp_if_udp: New UDP interface for point to point UDP links
- new: csp_if_tun: New IPsec like tunnel interface for secured links
- new: csp_crc32_verify: now checks data + header, but still accepts checksum on data only. Default is still data only (will change in 2.1)
- improvement: Support for 2k packets on CAN, KISS, UDP, ZMQ and others
- improvement: Uses only static memory allocation
- improvement: FreeRTOS 8+ support
- improvement: Decrease csp_dedup timeout from 1s to 100ms to avoid removing duplicate ACK packets in RDP streams
- improvement: Shorter debug message texts for smaller flash footprint
- improvement: uart driver linux. enable low latency mode
- improvement: socketcan: Setup sjw in can driver
- improvement: Portability. No more use of packed bitfields.
- improvement: RDP RX/TX queue is now global, saving a lot of memory
- improvement: FreeRTOS now uses taskNotify API instead of binary semaphores
- removed: --install-csp option from waf (replaced with `waf install`)
- removed: XTEA has been removed, use a dedicated encryption library instead
- removed: csp_endian.h: Use the system provided <endian.h> instead (which is faster and smaller)
- removed: csp_malloc.h: libcsp no longer uses dynamic allocation
- removed: Windows Support (moved to contrib, maintainer needed)
- removed: Mac OSX Support (moved to contrib, maintainer needed)
- removed: Incoming QoS. This didn't make much sense anyways, so a single fifo is now used