@@ -8,7 +8,7 @@
 #include <csp/interfaces/csp_if_kiss.h>
 #include <csp/drivers/usart.h>
 #include <csp/drivers/can_socketcan.h>
-#include <endian.h>
+#include <csp/csp_endian.h>
 
 #define SOCKET_CAPSULE     "csp_socket_t"
 #define CONNECTION_CAPSULE "csp_conn_t"
@@ -850,6 +850,7 @@ static PyObject * pycsp_zmqhub_init(PyObject * self, PyObject * args) {
 }
 #endif /* CSP_HAVE_LIBZMQ */
 
+#if CSP_HAVE_LIBSOCKETCAN
 static PyObject * pycsp_can_socketcan_init(PyObject * self, PyObject * args) {
 	char * ifc;
 	int bitrate = 1000000;
@@ -866,6 +867,7 @@ static PyObject * pycsp_can_socketcan_init(PyObject * self, PyObject * args) {
 
 	Py_RETURN_NONE;
 }
+#endif /* CSP_HAVE_LIBSOCKETCAN */
 
 static PyObject * pycsp_kiss_init(PyObject * self, PyObject * args) {
 	char * device;
@@ -990,8 +992,10 @@ static PyMethodDef methods[] = {
 #endif /* CSP_HAVE_LIBZMQ */
 	{"kiss_init", pycsp_kiss_init, METH_VARARGS, ""},
 
+#if CSP_HAVE_LIBSOCKETCAN
 	/* csp/drivers/can_socketcan.h */
 	{"can_socketcan_init", pycsp_can_socketcan_init, METH_VARARGS, ""},
+#endif /* CSP_HAVE_LIBSOCKETCAN */
 
 	/* helpers */
 	{"packet_get_length", pycsp_packet_get_length, METH_O, ""},
