@@ -11,6 +11,9 @@ if host_machine.system() == 'linux'
 	csp_sources += files(['eth/eth_linux.c'])
 	csp_sources += files(['usart/usart_linux.c'])
 	csp_sources += files(['usart/usart_kiss.c'])
+elif host_machine.system() == 'darwin'
+	csp_sources += files(['usart/usart_linux.c'])
+	csp_sources += files(['usart/usart_kiss.c'])
 elif host_machine.system() == 'windows'
 	csp_sources += files(['usart/usart_windows.c'])
 	csp_sources += files(['usart/usart_kiss.c'])
