@@ -8,12 +8,17 @@
 #include <netdb.h>
 
 #include <csp/csp.h>
-#include <endian.h>
+#include <csp/csp_endian.h>
 #include <csp/csp_interface.h>
 #include <csp/csp_id.h>
 
 #ifndef MSG_CONFIRM
 #define MSG_CONFIRM (0)
+#endif
+
+#if !defined(PF_PACKET)
+// FIXME
+#define PF_PACKET 0
 #endif
 
 static int csp_if_udp_tx(csp_iface_t * iface, uint16_t via, csp_packet_t * packet, int from_me) {
